add: some styles to leftBorard

--- a/index.html
+++ b/index.html
@@ -5,14 +5,222 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container__dasboard">
-      <div class="left_board"></div>
-      <div class="top_board"></div>
-      <div class="main_board"></div>
+      <div class="left_board">
+          <div class="container_mainTitle left_board-between">
+              <a href="" class="main_logo img_item">
+                  <img src="./images/T.png" alt="T logo">
+              </a>
+              <a href="" class="main_title">
+                 <span class="name_item">Dashboard</span> 
+              </a>
+          </div>
+          <nav class="nav_lists">
+              <ul class="nav_list left_board-between">
+                <li class="container_item">
+                    <a href="" class="img_item icon">
+                        <img src="./images/svg/home_.svg" alt="image item list">
+                    </a>
+                    <a href="" class="text_item">
+                      <span class="name_item">Home</span>
+                  </a>
+                </li>
+                <li class="container_item">
+                  <a href="" class="img_item icon">
+                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  </a>
+                  <a href="" class="text_item">
+                    <span class="name_item">Profile</span>
+                </a>
+                </li>
+                <li class="container_item">
+                  <a href="" class="img_item icon">
+                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  </a>
+                  <a href="" class="text_item">
+                    <span class="name_item">Messages</span>
+                </a>
+                </li>
+                <li class="container_item">
+                  <a href="" class="img_item icon">
+                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  </a>
+                  <a href="" class="text_item">
+                    <span class="name_item">History</span>
+                </a>
+                </li>
+                <li class="container_item">
+                  <a href="" class="img_item icon">
+                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  </a>
+                  <a href="" class="text_item">
+                    <span class="name_item">Tasks</span>
+                </a>
+                </li>
+                <li class="container_item">
+                  <a href="" class="img_item icon">
+                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  </a>
+                  <a href="" class="text_item">
+                    <span class="name_item">Communities</span>
+                  </a>
+                </li>
+              </ul>
+              <ul class="nav_list left_board-between">
+                <li class="container_item">
+                    <a href="" class="img_item icon">
+                        <img src="./images/svg/check_box_!.svg" alt="image item list">
+                    </a>
+                    <a href="" class="text_item">
+                      <span class="name_item">Settings</span>
+                  </a>
+                </li>
+                <li class="container_item">
+                  <a href="" class="img_item icon">
+                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  </a>
+                  <a href="" class="text_item">
+                    <span class="name_item">Support</span>
+                </a>
+                </li>
+                <li class="container_item">
+                  <a href="" class="img_item icon">
+                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  </a>
+                  <a href="" class="text_item">
+                    <span class="name_item">Privacy</span>
+                </a>
+                </li>
+              </ul>
+          </nav>  
+      </div>
+      <header class="top_board">
+            <div class="search_container">
+                <div class="img_item icon">
+                  <img src="./images/svg/check_box_!.svg" alt="image item list">
+                </div>
+                <input type="search" name="" id="" class="search">
+            </div>
+            <div class="login_data_container">
+              <div class="img_item icon">
+                <img src="./images/svg/check_box_!.svg" alt="image item list">
+              </div>
+              <div class="img_item icon-avatar">
+                <img src="./images/svg/check_box_!.svg" alt="image item list">
+              </div>
+              <span class="login_info_name">
+                  User Name
+              </span>
+            </div>
+            <div class="welcome_container">
+              <div class="img_item icon-avatar icon-avatar-big">
+                <img src="./images/svg/check_box_!.svg" alt="image item list">
+              </div> 
+              <h1 class="title">
+                <span class="title_hi">Hi there,</span>
+                <span class="title_name">User name (@user)</span>
+              </h1>
+            </div>
+            <div class="change_container">
+              <button class="button change">New</button>
+              <button class="button change">Upload</button>
+              <button class="button change">Share</button>
+            </div>
+      </header>
+      <div class="main_board">
+        <section class="projects">
+            <h2 class="title projects_title">Your projects</h2>
+              <ul class="projects_list">
+                <li class="project card">
+                  <h3 class="title project_title">
+                    My project
+                  </h3>
+                  <div class="project_image"><img src="" alt="picture of project"></div>
+                  <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
+                  <div class="project_action">
+                    <ul class="action_list">
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="project card">
+                  <h3 class="title project_title">
+                    My project
+                  </h3>
+                  <div class="project_image"><img src="" alt="picture of project"></div>
+                  <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
+                  <div class="project_action">
+                    <ul class="action_list">
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="project card">
+                  <h3 class="title project_title">
+                    My project
+                  </h3>
+                  <div class="project_image"><img src="" alt="picture of project"></div>
+                  <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
+                  <div class="project_action">
+                    <ul class="action_list">
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                    </ul>
+                  </div>
+                </li>
+              </ul>
+        </section>
+        <section class="announce">
+          <h2 class="announce_title title">
+            Announcements
+          </h2>
+          <ul class="announce_list">
+            <li class="announce_item card">
+              <h3 class="title">Announce</h3>
+              <p class="announce_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
+            </li>
+            <li class="announce_item card">
+              <h3 class="title">Announce</h3>
+              <p class="announce_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
+            </li>
+            <li class="announce_item card">
+              <h3 class="title">Announce</h3>
+              <p class="announce_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
+            </li>
+          </ul>
+        </section>
+        <section class="trending">
+          <h2 class="trending_title title">
+            Trending
+          </h2>
+          <ul class="trending_list">
+            <li class="trending_item card">
+              <div class="avatar_user"><img src="" alt="user's avatar image"></div>
+              <h3 class="user_name">My name</h3>
+              <div class="trending_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quam excepturi esse doloremq</div>
+            </li>
+            <li class="trending_item card">
+              <div class="avatar_user"><img src="" alt="user's avatar image"></div>
+              <h3 class="user_name">My name</h3>
+              <div class="trending_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quam excepturi esse doloremq</div>
+            </li>
+            <li class="trending_item card">
+              <div class="avatar_user"><img src="" alt="user's avatar image"></div>
+              <h3 class="user_name">My name</h3>
+              <div class="trending_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quam excepturi esse doloremq</div>
+            </li>
+          </ul>
+        </section>
+      </div>
   </div>
 </body>
 </html>
