add: icons and base styles to header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
                 <li class="container_item">
                   <a href="" class="img_item icon">
-                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                      <img src="./images/svg/profile_.svg" alt="image item list">
                   </a>
                   <a href="" class="text_item">
                     <span class="name_item">Profile</span>
@@ -39,7 +39,7 @@
                 </li>
                 <li class="container_item">
                   <a href="" class="img_item icon">
-                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                      <img src="./images/svg/messages_.svg" alt="image item list">
                   </a>
                   <a href="" class="text_item">
                     <span class="name_item">Messages</span>
@@ -47,7 +47,7 @@
                 </li>
                 <li class="container_item">
                   <a href="" class="img_item icon">
-                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                      <img src="./images/svg/history_.svg" alt="image item list">
                   </a>
                   <a href="" class="text_item">
                     <span class="name_item">History</span>
@@ -55,7 +55,7 @@
                 </li>
                 <li class="container_item">
                   <a href="" class="img_item icon">
-                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                      <img src="./images/svg/task_.svg" alt="image item list">
                   </a>
                   <a href="" class="text_item">
                     <span class="name_item">Tasks</span>
@@ -63,7 +63,7 @@
                 </li>
                 <li class="container_item">
                   <a href="" class="img_item icon">
-                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                      <img src="./images/svg/communities_.svg" alt="image item list">
                   </a>
                   <a href="" class="text_item">
                     <span class="name_item">Communities</span>
@@ -73,7 +73,7 @@
               <ul class="nav_list left_board-between">
                 <li class="container_item">
                     <a href="" class="img_item icon">
-                        <img src="./images/svg/check_box_!.svg" alt="image item list">
+                        <img src="./images/svg/settings_.svg" alt="image item list">
                     </a>
                     <a href="" class="text_item">
                       <span class="name_item">Settings</span>
@@ -81,7 +81,7 @@
                 </li>
                 <li class="container_item">
                   <a href="" class="img_item icon">
-                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                      <img src="./images/svg/support_.svg" alt="image item list">
                   </a>
                   <a href="" class="text_item">
                     <span class="name_item">Support</span>
@@ -89,7 +89,7 @@
                 </li>
                 <li class="container_item">
                   <a href="" class="img_item icon">
-                      <img src="./images/svg/check_box_!.svg" alt="image item list">
+                      <img src="./images/svg/privacy_.svg" alt="image item list">
                   </a>
                   <a href="" class="text_item">
                     <span class="name_item">Privacy</span>
@@ -101,16 +101,16 @@
       <header class="top_board">
             <div class="search_container">
                 <div class="img_item icon">
-                  <img src="./images/svg/check_box_!.svg" alt="image item list">
+                  <img src="./images/svg/search_.svg" alt="image item list">
                 </div>
                 <input type="search" name="" id="" class="search">
             </div>
             <div class="login_data_container">
               <div class="img_item icon">
-                <img src="./images/svg/check_box_!.svg" alt="image item list">
+                <img src="./images/svg/ring_.svg" alt="image item list">
               </div>
               <div class="img_item icon-avatar">
-                <img src="./images/svg/check_box_!.svg" alt="image item list">
+                <img src="./images/svg/emoticon-cool-outline.svg" alt="image item list">
               </div>
               <span class="login_info_name">
                   User Name
@@ -118,11 +118,11 @@
             </div>
             <div class="welcome_container">
               <div class="img_item icon-avatar icon-avatar-big">
-                <img src="./images/svg/check_box_!.svg" alt="image item list">
+                <img src="./images/svg/emoticon-cool-outline.svg" alt="image item list">
               </div> 
-              <h1 class="title">
-                <span class="title_hi">Hi there,</span>
-                <span class="title_name">User name (@user)</span>
+              <h1 class="wellcome_title">
+                <span class="title_hi title_small">Hi there,</span>
+                <span class="title_name title_midle">User name (@user)</span>
               </h1>
             </div>
             <div class="change_container">
@@ -131,7 +131,7 @@
               <button class="button change">Share</button>
             </div>
       </header>
-      <div class="main_board">
+      <main class="main_board">
         <section class="projects">
             <h2 class="title projects_title">Your projects</h2>
               <ul class="projects_list">
@@ -220,7 +220,7 @@
             </li>
           </ul>
         </section>
-      </div>
+      </main>
   </div>
 </body>
 </html>
