end base layout

--- a/index.html
+++ b/index.html
@@ -134,67 +134,97 @@
       <main class="main_board">
         <section class="projects">
             <h2 class="title projects_title">Your projects</h2>
-              <ul class="projects_list">
+            <ul class="projects_list">
                 <li class="project card">
                   <h3 class="title project_title">
                     My project
                   </h3>
-                  <div class="project_image"><img src="" alt="picture of project"></div>
-                  <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
-                  <div class="project_action">
+                  <!-- <div class="project_image"><img src="" alt="picture of project"></div> -->
+                  <p class="project_description description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
                     <ul class="action_list">
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
                     </ul>
-                  </div>
                 </li>
                 <li class="project card">
                   <h3 class="title project_title">
                     My project
                   </h3>
-                  <div class="project_image"><img src="" alt="picture of project"></div>
-                  <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
-                  <div class="project_action">
-                    <ul class="action_list">
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                    </ul>
-                  </div>
+                  <!-- <div class="project_image"><img src="" alt="picture of project"></div> -->
+                  <p class="project_description description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eligendi quasi earum voluptatibus velit commodi aliquam debitis, </p>
+                  <ul class="action_list">
+                    <li class="action"><button class="action_link"></button></li>
+                    <li class="action"><button class="action_link"></button></li>
+                    <li class="action"><button class="action_link"></button></li>
+                  </ul>
                 </li>
                 <li class="project card">
                   <h3 class="title project_title">
                     My project
                   </h3>
-                  <div class="project_image"><img src="" alt="picture of project"></div>
-                  <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
-                  <div class="project_action">
-                    <ul class="action_list">
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                      <li class="action"><a href="" class="action_link"><img src="" alt="" class="action_image"></a></li>
-                    </ul>
-                  </div>
+                  <!-- <div class="project_image"><img src="" alt="picture of project"></div> -->
+                  <p class="project_description description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at! lo</p>
+                  <ul class="action_list">
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
+                  </ul>
                 </li>
-              </ul>
+                <li class="project card">
+                  <h3 class="title project_title">
+                    My project
+                  </h3>
+                  <!-- <div class="project_image"><img src="" alt="picture of project"></div> -->
+                  <p class="project_description description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at!</p>
+                    <ul class="action_list">
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
+                    </ul>
+                </li>
+                <li class="project card">
+                  <h3 class="title project_title">
+                    My project
+                  </h3>
+                  <!-- <div class="project_image"><img src="" alt="picture of project"></div> -->
+                  <p class="project_description description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eligendi quasi earum voluptatibus velit commodi aliquam debitis, </p>
+                  <ul class="action_list">
+                    <li class="action"><button class="action_link"></button></li>
+                    <li class="action"><button class="action_link"></button></li>
+                    <li class="action"><button class="action_link"></button></li>
+                  </ul>
+                </li>
+                <li class="project card">
+                  <h3 class="title project_title">
+                    My project
+                  </h3>
+                  <!-- <div class="project_image"><img src="" alt="picture of project"></div> -->
+                  <p class="project_description description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At similique, quo illo laborum quibusdam officia esse! Dicta similique in, iusto ab eaque, sapiente molestias illum iste animi cumque maiores at! lo</p>
+                  <ul class="action_list">
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
+                      <li class="action"><button class="action_link"></button></li>
+                  </ul>
+                </li>
+            </ul>
         </section>
         <section class="announce">
           <h2 class="announce_title title">
             Announcements
           </h2>
-          <ul class="announce_list">
-            <li class="announce_item card">
-              <h3 class="title">Announce</h3>
-              <p class="announce_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
+          <ul class="announce_list card">
+            <li class="announce_item">
+              <h3 class="title title_small">Announce</h3>
+              <p class="announce_description description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
             </li>
-            <li class="announce_item card">
-              <h3 class="title">Announce</h3>
-              <p class="announce_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
+            <li class="announce_item">
+              <h3 class="title title_small">Announce</h3>
+              <p class="announce_description description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
             </li>
-            <li class="announce_item card">
-              <h3 class="title">Announce</h3>
-              <p class="announce_description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
+            <li class="announce_item">
+              <h3 class="title title_small">Announce</h3>
+              <p class="announce_description description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea aut possimus magnam itaque, consequatur saepe architecto aspernatur quas.</p>
             </li>
           </ul>
         </section>
@@ -202,21 +232,21 @@
           <h2 class="trending_title title">
             Trending
           </h2>
-          <ul class="trending_list">
-            <li class="trending_item card">
-              <div class="avatar_user"><img src="" alt="user's avatar image"></div>
-              <h3 class="user_name">My name</h3>
-              <div class="trending_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quam excepturi esse doloremq</div>
+          <ul class="trending_list card">
+            <li class="trending_item">
+              <div class="avatar_user"><img src="./images/svg/emoticon-cool-outline.svg" alt="user's avatar image"></div>
+              <h3 class="user_name title_small">@name</h3>
+              <div class="trending_description description">Lorem ipsum dolor</div>
             </li>
-            <li class="trending_item card">
-              <div class="avatar_user"><img src="" alt="user's avatar image"></div>
-              <h3 class="user_name">My name</h3>
-              <div class="trending_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quam excepturi esse doloremq</div>
+            <li class="trending_item">
+              <div class="avatar_user"><img src="./images/svg/emoticon-cool-outline.svg"" alt="user's avatar image"></div>
+              <h3 class="user_name title_small">@name</h3>
+              <div class="trending_description description">Lorem ipsum dolor sit</div>
             </li>
-            <li class="trending_item card">
-              <div class="avatar_user"><img src="" alt="user's avatar image"></div>
-              <h3 class="user_name">My name</h3>
-              <div class="trending_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quam excepturi esse doloremq</div>
+            <li class="trending_item">
+              <div class="avatar_user"><img src="./images/svg/emoticon-cool-outline.svg"" alt="user's avatar image"></div>
+              <h3 class="user_name title_small">@name</h3>
+              <div class="trending_description description">Lorem ipsum dolor s</div>
             </li>
           </ul>
         </section>
